--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ influxdb-client = "^1.36.1"
 pytz = "^2024.1"
 flask-admin = "1.6.1"
 Flask-Migrate = "^4.0.7"
+pollux-framework = "^0.1.0"
 
 [build-system]
 requires = ["poetry-core"]
